upgrade to use UI

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 JIRA_URL=https://your-company.atlassian.net
 JIRA_USERNAME=your-email@company.com
 JIRA_API_TOKEN=your-api-token-here
-JIRA_PROJECT_KEY=PROJ
 
-
+# Optional: Specify project keys (comma-separated)
+# Leave empty or comment out to fetch all accessible projects
+# JIRA_PROJECT_KEY=PROJ1,PROJ2,PROJ3
